# codecrafters-http-server-rust

./: Cargo.toml  README.md
src/: encoding.rs  main.rs  thread_pool.rs
src/http/: error.rs  mod.rs  request.rs  response.rs
