[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.3.0"                                  # helps manage buffers
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
thiserror = "1.0.38"                             # error handling
